@@ -81,9 +81,11 @@ grub_rescue_cmd_linux (int argc, char *argv[])
   if (! file)
     goto fail;
 
-  if (grub_file_size (file) > (grub_ssize_t) grub_os_area_size)
+  if ((grub_size_t) grub_file_size (file) > grub_os_area_size)
     {
-      grub_error (GRUB_ERR_OUT_OF_RANGE, "too big kernel");
+      grub_error (GRUB_ERR_OUT_OF_RANGE, "too big kernel (0x%x > 0x%x)",
+		  (grub_size_t) grub_file_size (file),
+		  grub_os_area_size);
       goto fail;
     }
 
